Added remove button to book card

--- a/index.html
+++ b/index.html
@@ -18,31 +18,7 @@
 					<h3 class="title">Rickrolling: The History</h3>
 					<h3 class="author">Rithvik</h3>
 					<p class="pages">50 pages</p>
-				</div>
-				<div class="card">
-					<h3 class="title">Rickrolling: The History</h3>
-					<h3 class="author">Rithvik</h3>
-					<p class="pages">50 pages</p>
-				</div>
-				<div class="card">
-					<h3 class="title">Rickrolling: The History</h3>
-					<h3 class="author">Rithvik</h3>
-					<p class="pages">50 pages</p>
-				</div>
-				<div class="card">
-					<h3 class="title">Rickrolling: The History</h3>
-					<h3 class="author">Rithvik</h3>
-					<p class="pages">50 pages</p>
-				</div>
-				<div class="card">
-					<h3 class="title">Rickrolling: The History</h3>
-					<h3 class="author">Rithvik</h3>
-					<p class="pages">50 pages</p>
-				</div>
-				<div class="card">
-					<h3 class="title">Rickrolling: The History</h3>
-					<h3 class="author">Rithvik</h3>
-					<p class="pages">50 pages</p>
+					<button class="remove-book">Remove</button>
 				</div>
 			</div>
 		</main>
