Changed some classes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<button class="add-book">Add Book</button>
 		</header>
 		<main>
-			<div class="books">
+			<div class="books-grid">
 				<div class="card">
 					<h3 class="title">Rickrolling: The History</h3>
 					<h3 class="author">Rithvik</h3>
