Removed book elements and changed book grid selector

--- a/index.html
+++ b/index.html
@@ -13,14 +13,7 @@
 			<button class="add-book">Add Book</button>
 		</header>
 		<main>
-			<div class="books-grid">
-				<div class="card">
-					<h3 class="title">Rickrolling: The History</h3>
-					<h3 class="author">Rithvik</h3>
-					<p class="pages">50 pages</p>
-					<button class="remove-book">Remove</button>
-				</div>
-			</div>
+			<div class="books-grid"></div>
 		</main>
 		<script src="script.js"></script>
 	</body>
