--- a/index.html
+++ b/index.html
@@ -8,19 +8,25 @@
 		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
-		<div class="overlay"></div>
+		<div class="overlay no-display"></div>
 		<header>
 			<h1>Library</h1>
 			<button class="add-book">Add Book</button>
 		</header>
 		<main>
-			<form class="add-book-form">
+			<form class="add-book-form no-display">
 				Name: <br />
-				<input type="text" placeholder="Enter book name" /> <br />
+				<input type="text" placeholder="Enter book name" class="title" /> <br />
 				Author: <br />
-				<input type="text" placeholder="Enter book author" /> <br />
+				<input type="text" placeholder="Enter book author" class="author" />
+				<br />
 				Number of pages: <br />
-				<input type="number" placeholder="Enter the number of pages" /> <br />
+				<input
+					type="number"
+					placeholder="Enter the number of pages"
+					class="num-of-pages"
+				/>
+				<br />
 				<button type="submit">Add Book</button>
 			</form>
 			<div class="books-grid"></div>
