Added a checkbox to check if book is read to form and book card

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="overlay no-display"></div>
 		<header>
 			<h1>Library</h1>
-			<button class="add-book">Add Book</button>
+			<button class="add-book btn">Add Book</button>
 		</header>
 		<main>
 			<form class="add-book-form no-display">
@@ -27,6 +27,7 @@
 					class="num-of-pages"
 				/>
 				<br />
+				Read the book? <input type="checkbox" class="is-read" /> <br />
 				<button type="submit">Add Book</button>
 			</form>
 			<div class="books-grid"></div>
