Added button to close form popup

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 		</header>
 		<main>
 			<form class="add-book-form no-display">
+				<div class="form-header">
+					<h3>Add a book</h3>
+					<button class="close btn">&times;</button>
+				</div>
 				Name: <br />
 				<input type="text" placeholder="Enter book name" class="title" /> <br />
 				Author: <br />
@@ -28,7 +32,7 @@
 				/>
 				<br />
 				Read the book? <input type="checkbox" class="is-read" /> <br />
-				<button type="submit">Add Book</button>
+				<button type="submit" class="btn">Add Book</button>
 			</form>
 			<div class="books-grid"></div>
 		</main>
